--- a/build.gradle
+++ b/build.gradle
@@ -14,7 +14,10 @@ repositories {
 }
 
 dependencies {
+	implementation 'org.apache.commons:commons-lang3:3.11'
+	implementation 'org.apache.httpcomponents:httpclient:4.5.13'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
+	implementation 'org.springframework.boot:spring-boot-starter'
 	providedRuntime 'org.springframework.boot:spring-boot-starter-tomcat'
 	testImplementation('org.springframework.boot:spring-boot-starter-test') {
 		exclude group: 'org.junit.vintage', module: 'junit-vintage-engine'
